# rsaxumapp

./: .env  Cargo.toml  README.md
src/: db.rs  main.rs  models.rs  templates.rs
templates/: base.html  categories.html  catproducts.html  customerorders.html  customers.html  error.html  index.html  orderdetails.html  products.html  zonetime.html  zonetimes.html
