[package]
name = "rsaxumapp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
askama = "0.13"
tower-http = { version = "0.6", features = ["cors"] }
askama_derive = "0.13"
dotenv = "0.15.0"
hyper = "1.8.1"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "chrono", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
filters = "0.4.0"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10"
num-format = "0.4.4"
